--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div class="dList">
             <h3 class="h3-1">Select year group category</h3>
-            <select class="category select-css" id="sel" onchange="groupSelection()">
+            <select class="category" id="sel" onchange="groupSelection()">
                 <option class="firstOption" value="">► Select ◄</option>
                 <option class="droplist" value="bJr">Момчета младша</option>
                 <option class="droplist" value="gJr">Момичета младша</option>
